tests/baselines/reference/scannerAdditiveExpression1.errors.txt
==== tests/cases/compiler/scannerAdditiveExpression1.ts (2 errors) ====
    m.index+1+m[0].length;
    ~
!!! scannerAdditiveExpression1.ts(1,1): error TS2095: Cannot find name 'm'.
              ~
!!! scannerAdditiveExpression1.ts(1,11): error TS2095: Cannot find name 'm'.